--- a/to-do-list-app/package.json
+++ b/to-do-list-app/package.json
@@ -11,14 +11,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.1",
     "@tanstack/react-query": "^5.60.6",
+    "@tanstack/react-query-devtools": "^5.61.0",
+    "axios": "^1.7.7",
     "classnames": "^2.5.1",
     "json-server": "^1.0.0-beta.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
-    "react-router": "^6.28.0",
+    "react-router-dom": "^6.28.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
