--- a/.gitignore
+++ b/.gitignore
@@ -1,65 +1,24 @@
-# Ignore all node_modules directories
-**/node_modules/
-
 # Logs
-logs/
+logs
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# Build output
-build/
-dist/
-.out/
-.next/
-.vite/
+node_modules
+dist
+dist-ssr
+*.local
 
-# Temporary files
-temp/
-tmp/
-.cache/
-
-# IDE/Editor files
-*.swp
-.vscode/
-.idea/
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
 .DS_Store
-*.sublime-project
-*.sublime-workspace
-
-# Environment files
-.env
-.env.*.local
-
-# TypeScript
-*.tsbuildinfo
-*.d.ts.map
-*.js.map
-*.d.ts
-
-# Package lock files (optional, if not shared across team)
-package-lock.json
-pnpm-lock.yaml
-
-# Lint/cache
-eslintcache/
-.stylelintcache
-
-# Coverage
-coverage/
-
-# Test and reports
-*.lcov
-*.clover
-*.coverage
-.jest/
-
-# Storybook
-.storybook-out/
-.storybook-static/
-
-# Miscellaneous
-*.tgz
-*.bak
-*.orig
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
